ch7/k8s-webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
        - name: webhook-server
          image: k8s-webhook:v1beat1
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: webhook-certs
              mountPath: "/etc/ssl/"
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: webhook-server-tls

---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: default
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: webhook-server
