ch7/k8s-webhook/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - name: deployment-validation.webhook.k8s.io
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["DELETE"]
        resources: ["deployments"]
    clientConfig:
      service:
        name: webhook-server
        namespace: default
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIVENDQWdXZ0F3SUJBZ0lKQU5Dd2R4L1NFcHdQTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ1V4SXpBaEJnTlYKQkFNTUduZGxZbWh2YjJzdGMyVnlkbVZ5TG1SbFptRjFiSFF1YzNaak1CNFhEVEkwTURZd01qQTBORE13TmxvWApEVEkxTURZd01qQTBORE13Tmxvd0pURWpNQ0VHQTFVRUF3d2FkMlZpYUc5dmF5MXpaWEoyWlhJdVpHVm1ZWFZzCmRDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzdwQzdIQ0tuZFhiOGcKbGNNdFVnR2FLOUtvSDdYeTA0NWNBVjBYS0Z1bjdNUDZlcmxBNWFETWxTVXV5VjlCOHlrNkQ4Rlp2T0pqeUVWUApxWWtQZTBZUUpk [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
